# CGA218CMake

./: .gitignore  CMakeLists.txt
assets/shaders/: FireEmitterFragment.glsl  FireEmitterVertex.glsl  fragment.glsl  pixelEmitterFragment.glsl  pixelEmitterVertex.glsl  vertex.glsl
framework/: OBJLoader.cpp
libs/glew-2.1.0/: README.md  glew.pc
libs/glfw-3.2.1/examples/: heightmap.c  particles.c
src/: main.cpp
src/Framework/Assets/: AssetManager.h  ShaderProgram.h
src/Framework/Rendering/: Texture2D.cpp  Texture2D.h
src/Framework/SceneElements/: Camera.cpp  Camera.h  FireEmitter.cpp  FireEmitter.h  FreeCamera.cpp  FreeCamera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PixelEmitter.cpp  PixelEmitter.h  PointLight.cpp  PointLight.h  Renderable.cpp  Renderable.h  Skybox.cpp  Skybox.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h  Transform.cpp  Transform.h
src/Game/: Scene.cpp  Scene.h
